--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -3,46 +3,44 @@
 # **************************************************************************** #
 
 NAME     := convert
-
 CXX      := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g3
 
-OBJDIR   := obj
+OBJ_DIR  := obj/
 
 SRCS     := main.cpp \
-            ScalarConverter.cpp
+          ScalarConverter.cpp
 
-OBJS     := $(addprefix $(OBJDIR)/, $(SRCS:.cpp=.o))
-DEPS     := $(OBJS:.o=.d)
+OBJS     := $(SRCS:%.cpp=$(OBJ_DIR)%.o)
+DEPS     := $(SRCS:%.cpp=$(OBJ_DIR)%.d)
 
 # **************************************************************************** #
-#                                   Rules                                      #
+#                                 Build Rules                                  #
 # **************************************************************************** #
 
 all: $(NAME)
-	@echo "✅ $(NAME) built successfully!"
+	@echo "🔥 $(NAME) built successfully!"
 
 $(NAME): $(OBJS)
 	@$(CXX) $(CXXFLAGS) $(OBJS) -o $@
-	@echo "🚀 Linked: $(NAME)"
+	@echo "✅ $(NAME) object files compiled."
+	@echo "🚀 $(NAME) created!"
 
-$(OBJDIR)/%.o: %.cpp | $(OBJDIR)
+$(OBJ_DIR)%.o: %.cpp
+	@mkdir -p $(dir $@)
 	@$(CXX) $(CXXFLAGS) -MMD -MP -c $< -o $@
-	@echo "🔧 Compiled: $<"
-
-$(OBJDIR):
-	@mkdir -p $(OBJDIR)
 
 clean:
-	@rm -rf $(OBJDIR)
-	@echo "🧹 Cleaned objects."
+	@rm -rf $(OBJ_DIR)
+	@echo "🗑️ $(NAME) object files removed."
 
 fclean: clean
 	@rm -f $(NAME)
-	@echo "🗑️  Removed binary."
+	@echo "😒 $(NAME) and binary removed."
 
 re: fclean all
 
 -include $(DEPS)
 
 .PHONY: all clean fclean re
+.DELETE_ON_ERROR:
